<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo.gerardo_tarazona.demoapp.UserRecovery"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_user_recobery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/email_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email_img"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/recovery_password"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/recovery_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>
